# Course_project_6.mailer

./: README.md  blog_data.json  mail_data.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_preview.py
blog/templates/blog/: blog_detail.html  blog_list.html
config/: settings.py  urls.py
mail/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mail/migrations/: 0001_initial.py  0002_alter_mailing_frequency.py  0002_message.py  0003_alter_mailing_frequency.py  0003_client_comment.py  0004_alter_client_client_email.py  0005_alter_mailing_frequency.py  0006_mailing_owner.py  0007_client_owner_message_owner_alter_mailing_owner.py  0008_alter_client_owner_alter_mailing_owner_and_more.py  0009_rename_owner_client_client_owner_and_more.py  0010_rename_client_owner_client_owner_and_more.py  0011_alter_mailing_options.py  0012_log_message.py  0013_mailing_last_sent.py  0014_alter_log_message.py
mail/templates/mail/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  log_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_send_message_successful.html  manager_mailing_form.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: add_managers_group.py  csu.py  start_send_mail.py
users/migrations/: 0001_initial.py
users/templates/users/: change_password.html  login.html  (+3 more)
(+9 files in other folders)
